우편번호찾기 html 추가
* 조회 영역만 대상
* 쉽게 이해할 수 있도록 폼, 컨트롤들의 동작 형태와 이벤트만 연결
* xhr 반

--- a/HTML/마크업.html
+++ b/HTML/마크업.html
@@ -2,16 +2,7 @@
 <meta charset="utf-8"> 
 <title>우편번호 주소찾기, 우편번호관리</title>
 <!-- <link rel="stylesheet" href="http://soopul.com/css/form/controller-0.1.css"> -->
-<style>
-	html, body {
-		font-size: small; 
-		font-family: Arial;
-		line-height: 1.4;
-	}
-	input, select {
-		font-size: 1em; 
-	}
-</style>
+<link rel="stylesheet" href="./postcode.css">
 
 
 
