--- a/HTML/postcode-search.html
+++ b/HTML/postcode-search.html
@@ -6,11 +6,10 @@
 	<link rel="stylesheet" href="./postcode.css">
 	<script src="http://image.gsshop.com/deal/static/html/mc/script/lib/json2.js"></script>
 	<script src="./res/xhr.js"></script>
-	<script src="./res/form.js"></script>
 </head>
 <body>
 	
-	<form id="postcodeSearch" class="postcodeSearch" action="" method="">
+	<form id="postcodeSearchForm" class="postcodeSearchForm" action="" method="">
 		<fieldset>
 			<legend>우편번호 등록</legend>
 
@@ -43,6 +42,38 @@
 			<a href="#" target="_blank">엑셀등록</a>
 		</p>
 	</form>
+
+
+	<table id="dustm" class="postcodeResults" summary="테이블에 표현할 정보를 상세히 기술 - 도로명주소, 도로명, 키워드 입력을 통해 조회한 주소를 순번, 우편번호, 주소로 보여주는 테이블">
+		<caption>표1. 우편번호 검색 결과</caption>
+		<colgroup>
+		<col class="order">
+		<col class="postcode">
+		<col class="address">
+		<thead>
+			<tr>
+				<th>순번</th>
+				<th>우편번호</th>
+				<th>주소</th>
+			</tr>
+		</thead>
+		<tbody>
+			<!-- {#.} -->
+			<tr>
+				<td>{order}</td>
+				<td>{postcode}</td>
+				<td><a>{address}</a></td>
+			</tr>
+			<!-- {/.} -->
+		</tbody>
+	</table>
+	<!-- 
+		{
+			num: '', 
+			postcode: '', 
+			address: ''
+		}
+	-->
 
 	<script>
 		/* postcodeSearch */
@@ -103,21 +134,20 @@
 
 				xhr({
 					type: "GET", 
-					url: "http://soopul.com", 
+					url: "./postcode-search.json", 
 					success: function(data) {
-						alert(data);
 						form.submit.disabled = false;
 					}, 
 					error: function(err) {
-						alert(err);
 						form.submit.disabled = false;
 					}
 				});
 
+
 				return false;
 			};
 
-		})(document, 'postcodeSearch');
+		})(document, 'postcodeSearchForm');
 	</script>
 
 </body>
