--- a/HTML/postcode-search.html
+++ b/HTML/postcode-search.html
@@ -1,42 +1,42 @@
 <!doctype html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>우편번호 찾기</title>
-	<link rel="stylesheet" href="./postcode.css">
-	<script src="http://image.gsshop.com/deal/static/html/mc/script/lib/json2.js"></script>
-	<script src="./res/xhr.js"></script>
-</head>
-<body>
+<meta charset="UTF-8">
+<title>우편번호 찾기</title>
+<link rel="stylesheet" href="./postcode.css">
+<script src="http://image.gsshop.com/deal/static/html/mc/script/lib/json2.js"></script>
+<script src="./res/xhr.js"></script>
+
+
+<section class="postcodeSearch">
+	<h1>우편번호 목록</h1>
 	
-	<form id="postcodeSearchForm" class="postcodeSearchForm" action="" method="">
-		<fieldset>
-			<legend>우편번호 등록</legend>
+	<h2>조회</h2>
 
-			<span class="row">
-				<label for="addrSelect1" class="rowh">도로명주소</label>
-				<select name="addrSelect1" id="addrSelect1">
-					<option value="v0">도로명주소</option>
-					<option value="v1">1</option>
-					<option value="v2">2</option>
-				</select>
-			</span>
+	<form id="postcodeSearchForm" class="form" action="http://soopul.com" method="GET">
 
-			<span class="row">
-				<label for="addrSelect2" class="rowh">도로명</label>
-				<select name="addrSelect2" id="addrSelect2">
-					<option value="v0">도로명</option>
-					<option value="v1">1</option>
-					<option value="v2">2</option>
-				</select>
-			</span>
+		<label class="row">
+			<span class="rowh">도로명주소</span>
+			<select name="addrSelect1" id="addrSelect1">
+				<option value="v0">도로명주소</option>
+				<option value="v1">1</option>
+				<option value="v2">2</option>
+			</select>
+		</label>
 
-			<span class="row">
-				<label for="addrText" class="rowh">도로명입력</label>
-				<input type="text" name="addrText" id="addrText" value="" placeholder="도로명 입력">
-			</span>
-		</fieldset>
-		<p class="controls" id="postcodeSearch_controls">
+		<label class="row">
+			<span class="rowh">도로명</span>
+			<select name="addrSelect2" id="addrSelect2">
+				<option value="v0">도로명</option>
+				<option value="v1">1</option>
+				<option value="v2">2</option>
+			</select>
+		</label>
+
+		<label class="row">
+			<span class="rowh">도로명입력</span>
+			<input type="text" name="addrText" id="addrText" value="" placeholder="도로명 입력">
+		</label>
+
+		<p class="controls">
 			<input type="submit" id="submit" value="조회">
 			<a href="#" target="_blank">등록</a>
 			<a href="#" target="_blank">엑셀등록</a>
@@ -44,18 +44,21 @@
 	</form>
 
 
-	<table id="dustm" class="postcodeResults" summary="테이블에 표현할 정보를 상세히 기술 - 도로명주소, 도로명, 키워드 입력을 통해 조회한 주소를 순번, 우편번호, 주소로 보여주는 테이블">
-		<caption>표1. 우편번호 검색 결과</caption>
+	<h2>검색결과</h2>
+	<table id="postcodeResultTable" class="results">
+		<caption>
+			<p>테이블 1. 
+			<p>도로명주소, 도로명, 키워드로 검색한 정보중 순번, 우편번호, 주소만을 걸러내어 보여준다
+		</caption>
 		<colgroup>
-		<col class="order">
-		<col class="postcode">
-		<col class="address">
+			<col class="order">
+			<col class="postcode">
+			<col class="address">
 		<thead>
 			<tr>
 				<th>순번</th>
 				<th>우편번호</th>
 				<th>주소</th>
-			</tr>
 		</thead>
 		<tbody>
 			<!-- {#.} -->
@@ -63,18 +66,12 @@
 				<td>{order}</td>
 				<td>{postcode}</td>
 				<td><a>{address}</a></td>
-			</tr>
 			<!-- {/.} -->
 		</tbody>
 	</table>
-	<!-- 
-		{
-			num: '', 
-			postcode: '', 
-			address: ''
-		}
-	-->
-	<nav class="postcodeResults-nav">
+
+	<nav class="paging-nav">
+		<h1>우편번호 검색 결과 페이지 이동</h1>
 		<ul>
 			<li><a>처음</a></li>
 			<li><a>이전</a></li>
@@ -161,6 +158,4 @@
 
 		})(document, 'postcodeSearchForm');
 	</script>
-
-</body>
-</html>
+</section>
