--- a/HTML/postcode-search/PAR1.html
+++ b/HTML/postcode-search/PAR1.html
@@ -9,36 +9,36 @@
 
 
 <div id="dustm">
-<section id="resutls" class="results type_{addressType}">
-	<h1>검색결과</h1>
-	<table id="postcodeResultTable">
-		<caption>
-			<p>테이블 1. 도로명주소, 도로명, 키워드로 검색한 정보중 순번, 우편번호, 주소만을 걸러내어 보여준다
-		</caption>
-		<colgroup>
-			<col class="id">
-			<col class="postcode">
-			<col class="address">
-		<thead>
-			<tr>
-				<th>순번</th>
-				<th>우편번호</th>
-				<th>주소</th>
-		</thead>
-		<tbody>
-			<!-- {#contents} -->
-			<tr>
-				<th>{id}</th>
-				<td>{postCode}</td>
-				<td><a>{address}</a></td>
-			<!-- {/contents} -->
-		</tbody>
-	</table>
+	<section class="type_{addressType}">
+		<h1>검색결과</h1>
+		<table id="postcodeResultTable">
+			<caption>
+				<p>테이블 1. 도로명주소, 도로명, 키워드로 검색한 정보중 순번, 우편번호, 주소만을 걸러내어 보여준다
+			</caption>
+			<colgroup>
+				<col class="id">
+				<col class="postcode">
+				<col class="address">
+			<thead>
+				<tr>
+					<th>순번</th>
+					<th>우편번호</th>
+					<th>주소</th>
+			</thead>
+			<tbody>
+				<!-- {#contents} -->
+				<tr>
+					<th>{id}</th>
+					<td>{postCode}</td>
+					<td><a>{address}</a></td>
+				<!-- {/contents} -->
+			</tbody>
+		</table>
 
-	<nav class="paging-nav _conditional">
-		<h1>우편번호 검색 결과 페이지 이동</h1>
-	</nav>
-</section><!-- #results -->
+		<nav class="paging-nav _conditional">
+			<h1>우편번호 검색 결과 페이지 이동</h1>
+		</nav>
+	</section>
 </div>
 
 <!-- <script src="./postcode.js"></script> -->
