--- a/HTML/postcode-search/PAR1.html
+++ b/HTML/postcode-search/PAR1.html
@@ -9,7 +9,7 @@
 
 
 <div id="dustm">
-	<section class="type_{addressType}">
+	<section id="results" class="results type_{addressType}">
 		<h1>검색결과</h1>
 		<table id="postcodeResultTable">
 			<caption>
