--- a/HTML/postcode-search/index.html
+++ b/HTML/postcode-search/index.html
@@ -38,9 +38,7 @@
 	
 
 	
-	<div id="resutls" class="results">
-		<!-- ${view} -->
-	</div><!-- #results -->
+	${view}
 </section>
 
 <script src="http://soopul.com/mullae/postcode/res/postcode.js"></script>
