--- a/HTML/postcode-search/index.html
+++ b/HTML/postcode-search/index.html
@@ -41,4 +41,7 @@
 	${view}
 </section>
 
-<script src="http://soopul.com/mullae/postcode/res/postcode.js"></script>
+<!-- <script src="http://soopul.com/mullae/postcode/res/postcode.js"></script> -->
+<script src="http://image.gsshop.com/deal/static/html/mc/script/lib/json2.js"></script>
+<script src="http://image.gsshop.com/deal/static/html/mc/script/lib/xhr.js"></script>
+<script src="./res/postcode.js"></script>
