--- a/HTML/postcode-search/index.html
+++ b/HTML/postcode-search/index.html
@@ -17,7 +17,7 @@
 			</label>
 			<br>
 			<label for="addressTypeB"> 
-				<input type="radio" name="addressType" id="addressTypeB" value="R">
+				<input type="radio" name="addressType" id="addressTypeB" value="STREET">
 				<span class="rowh">도로명</span>
 			</label>
 		</fieldset>
