--- a/HTML/postcode-search/PAR1.html
+++ b/HTML/postcode-search/PAR1.html
@@ -62,10 +62,10 @@
 	</section>
 </div>
 
-<script src="./postcode.js"></script>
-<!-- <script src="http://image.gsshop.com/deal/static/html/mc/script/lib/json2.js"></script>
-<script src="http://image.gsshop.com/deal/static/html/mc/script/lib/xhr.js"></script> -->
+<script src="http://image.gsshop.com/deal/static/html/mc/script/lib/json2.js"></script>
+<script src="http://image.gsshop.com/deal/static/html/mc/script/lib/xhr.js"></script>
 <script src="http://image.gsshop.com/deal/static/html/mc/script/lib/dust-full-1.1.1.js"></script>
 <script src="http://image.gsshop.com/deal/static/html/mc/script/lib/dust-helpers-1.1.1.js"></script>
 <script src="./render.json"></script>
 <script src="http://image.gsshop.com/deal/static/html/mc/script/lib/dustr.js"></script>
+<script src="./res/postcode.js"></script>
