--- a/HTML/postcode-search/PAR1.html
+++ b/HTML/postcode-search/PAR1.html
@@ -16,14 +16,14 @@
 				<p>테이블 1. 도로명주소, 도로명, 키워드로 검색한 정보중 순번, 우편번호, 주소만을 걸러내어 보여준다
 			</caption>
 			<colgroup>
-				<col class="id">
-				<col class="postcode">
-				<col class="address">
+				<col>
+				<col>
+				<col>
 			<thead>
 				<tr>
-					<th>ID</th>
-					<th>우편번호</th>
-					<th>주소</th>
+					<th class="id">ID</th>
+					<th class="postCode">우편번호</th>
+					<th class="address">주소</th>
 			</thead>
 			<tbody>
 				<!-- {#contents} -->
