--- a/HTML/postcode-search/index.html
+++ b/HTML/postcode-search/index.html
@@ -22,7 +22,7 @@
 		<p class="inputTextBox">
 			<label for="address">
 				<span class="rowh">검색어 입력</span>
-				<input type="text" name="address" id="address" placeholder="도로명 입력">
+				<input type="text" name="address" id="address" placeholder="도로명 입력" value="영등포">
 				<input type="submit" id="submit" value="조회">
 			</label>
 		</p>
